# AutoRefine

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
autorefine/: __init__.py  _retry.py  ab_testing.py  analytics.py  async_client.py  cli.py  client.py  config.py  cost_tracker.py  dimensions.py  directives.py  exceptions.py  feedback.py  feedback_filter.py  feedback_provider.py  interceptor.py  models.py  notifications.py  outcomes.py  pii_scrubber.py  privacy.py  refiner.py  store.py  widget.py
autorefine/cloud/: .env.example  __init__.py  admin.py  auth.py  billing.py  keys.py  models.py  proxy.py  schema.sql  server.py
autorefine/dashboard/: __init__.py  api.py  server.py  widget_endpoint.py
autorefine/dashboard/templates/: index.html
autorefine/providers/: __init__.py  anthropic_provider.py  base.py  cloud_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py
autorefine/storage/: __init__.py  base.py  json_store.py  postgres_store.py  sqlite_store.py
docs/: api-reference.md  architecture.md  changelog.md  comparison.md  configuration.md  custom-refiners.md  deployment.md  faq.md  feedback-types.md  getting-started.md  index.md  security.md
docs/assets/: extra.css
examples/: async_chatbot.py  chatbot_example.py  content_generator.py  customer_support.py  flask_app_with_widget.py  quickstart.py
tests/: test_ab_testing.py  test_async.py  test_client.py  test_cloud_auth.py  test_cloud_billing.py  test_cloud_provider.py  test_concurrency.py  test_config.py  test_dimensions.py  test_directives.py  test_feedback.py  test_feedback_filter.py  test_integration.py  test_interceptor.py  test_notifications.py  test_outcomes.py  test_pii_scrubber.py  test_providers.py  test_refiner.py  test_store.py
